# hyprgrass

./: README.md
nix/: wf-touch.nix
src/: GestureManager.cpp  GestureManager.hpp  ShimTrackpadGestures.cpp  ShimTrackpadGestures.hpp  TouchVisualizer.cpp  TouchVisualizer.hpp  main.cpp
src/gestures/test/: meson.build
